using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace BrightSouls.Gameplay
{
    public class PlayerInteractor : MonoBehaviour
    {
        public PlayerCommand interact;
    }
}