@startuml Player Overview

' ==========================
'  Preamble
' ==========================

!include styledefs.iuml

title Bright Souls - Player Components Overview

' ==========================
'  Definitions
' ==========================

class Player $stereo("MonoBehaviour")
{
    + $get $type("PlayerMotor")          Motor
    + $get $type("InputHandler")         Input
    + $get $type("PlayerInteractor")     Interactor
    + $get $type("PlayerCameraDirector") Director
}

namespace Camera {
    .Player *-- PlayerCameraDirector
}

namespace Combat.Player {
    .Player *-- PlayerCombatController
}

namespace Movement {
    class PlayerMotor <<MonoBehaviour>>
    .Player *-- PlayerMotor
}

namespace Interaction {
    class PlayerInteractor<<MonoBehaviour>>

    .Player *-- PlayerInteractor
}

namespace Animation {
    class PlayerAnimator <<MonoBehaviour>>

    .Player *-r- PlayerAnimator
}

namespace Audio {
    class PlayerAudioEventHandler<<MonoBehaviour>>
    .Player *-- PlayerAudioEventHandler
}

namespace VFX {
    class PlayerVFXHandler<<MonoBehaviour>>
    .Player *-- PlayerVFXHandler
}

package "FMOD Plugin" <<Node>>
{
    component FMOD {
    }
    Audio.PlayerAudioEventHandler -- FMOD
}

package UnityEngine <<Node>>
{
    component InputHandler {
    }
    component Animator {
    }
    Animation.PlayerAnimator o-- Animator
    .Player o-- InputHandler
}

' ==========================
'  Notes
' ==========================

note as N1
    Details are hidden in
    several namespaces.
    Check additional
    diagrams for specific
    information.
end note

' ==========================

@enduml